
	* swank-ecl.lisp (grovel-docstring-for-arglist): Fix for arglist
	that reads, but isn't a list

2009-01-27  Tobias C. Rittweiler  <tcr@freebits.de>

	* swank-backend.lisp (with-symbol): New function, to be used with #+.

	* swank-sbcl.lisp: Use WITH-SYMBOL and get rid of SBCL-WITH-SYMBOL.

	* swank-openmcl.lisp (macroexpand-all): Implement it.

	Patch by Stas Boukarev.

2009-01-30  Helmut Eller  <heller@common-lisp.net>

	* slime.el (slime-restart-or-init-modeline-update-timer): Don't
	run the timer repeatedly.
	(slime-change-directory): Also change the directory in the
	connection-buffer.

2009-01-23  Tobias C. Rittweiler  <tcr@freebits.de>

	* slime.el (slime-editing-keys): New variable; splitted from
	`slime-keys'. Contains key bindings that are useful for buffers
	where users can edit s-exprs, such as source buffers and the REPL.
	(slime-keys): Use it.

2009-01-17  Tobias C. Rittweiler  <tcr@freebits.de>

	Fix C-u C-c C-c in SLDB.

	* slime.el (sldb-recompile-frame-source): sind
	`slime-compilation-policy' at the right place.

2009-01-15  Martin Simmons  <martin@lispworks.com>

	* swank-lispworks.lisp: wrapper functions for swank-mop
 	slot-boundp-using-class, slot-value-using-class and
 	slot-makunbound-using-class to account for MOP differences.

2009-01-16  Helmut Eller  <heller@common-lisp.net>

	* slime.el (slime-keys): Put C-c C-i and M-* back.

2009-01-16  Helmut Eller  <heller@common-lisp.net>

	* swank.lisp (pprint-eval): Also return the output produced during
	evaluation.

2009-01-16  Helmut Eller  <heller@common-lisp.net>

	* swank-openmcl.lisp (break-in-sldb): Display the argument.

2009-01-16  Helmut Eller  <heller@common-lisp.net>

	* swank-backend.lisp (warn-unimplemented-interfaces): Print the
	names with pprint-fill.

2009-01-10  Helmut Eller  <heller@common-lisp.net>

	* swank-openmcl.lisp (install-debugger-globally): Set *break-in-sldb*.

2009-01-10  Tobias C. Rittweiler  <tcr@freebits.de>

	* swank.lisp (do-symbols*): Wrap body in TAGBODY.